# hydrogen_infrastructure_playground

./: README.md  setup.cfg
hydrogen/: __init__.py
hydrogen/dataloaders/: mixins.py  taylor_example_dataloader.py
hydrogen/models/: taylor_example_model.py
hydrogen_pg/dataloaders/: conv3d_space_dataloader.py  taylor_example_dataloader.py
hydrogen_pg/models/: basic_densenet.py  conv3d_autoencoder.py  taylor_example_model.py
hydrogen_pg/utils/: callbacks.py  constants.py
notebooks/: testing_autoencoder.ipynb  testing_dataloader.ipynb
