[metadata]
name = hydrogen_pg
author_email = bennett.andr@gmail.com
license = Apache
url = https://github.com/arbennett/hydrogen_infrastructure_playground
description = Working on some proof of concept for HydroGEN
long_description_content_type=text/x-rst
long_description =
    **pf-xarray** is an extension to **xarray** that is meant to
    make working with Parflow input and output data much easier.

    This package introduces extensions which aim to make it simple
    to load in such datasets into xarray data structures in a standard
    and robust way.
